# udend-capstone-project

./: .gitignore  README.rst  emr_default.json  pyproject.toml  requirements.txt
accidents_dend_capstone/airflow/dags/: etl_raw_to_analytic_datalake_dag.py  load_raw_datalake_dag.py
accidents_dend_capstone/airflow/plugins/: __init__.py
accidents_dend_capstone/airflow/plugins/helpers/: __init__.py  default_settings.py  emr_step.py
accidents_dend_capstone/airflow/plugins/operators/: __init__.py  create_s3_bucket.py  data_quality.py  load_to_s3.py
accidents_dend_capstone/spark_etl/: accidents.py  demographics.py  lake_quality_analysis.py
accidents_dend_capstone/utils/: local_settings.py  split_accidents.py
data/: data.7z.011
docker/: Dockerfile  airflow.cfg  docker-compose.yml
